Use a file: URL instead of a jar: URL to test the generic provider.
git-svn-id: https://svn.apache.org/repos/asf/jakarta/commons/sandbox/vfs/trunk@147867 13f79535-47bb-0310-9956-ffa450edef68